Finished data working on model

--- a/dataset.ipynb
+++ b/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "incoming-arizona",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "latter-springer",
    "metadata": {},
    "outputs": [
@@ -24,183 +24,82 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:02<00:00,  3.81it/s]\n"
+      "100%|██████████| 20/20 [00:01<00:00, 12.71it/s]\n"
      ]
     }
    ],
    "source": [
     "train_models = src.shapenet.get_shapenet_data(\"train\")\n",
-    "for i in tqdm.tqdm(range(10)):\n",
+    "clouds = []\n",
+    "for i in tqdm.tqdm(range(20)):\n",
     "    model_path = train_models[np.random.randint(len(train_models))]\n",
-    "    cloud = src.shapenet.sample_points(model_path, nb=10000)"
+    "    cloud = src.shapenet.sample_points(model_path, nb=100000)\n",
+    "    clouds.append(cloud)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "afraid-hunger",
+   "execution_count": 7,
+   "id": "democratic-desperate",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:22<00:00,  1.13s/it]\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.neighbors import KDTree"
+    "extracted = []\n",
+    "extractor = src.dataset.PPFPatchExtractor(nb_patches=2044, nb_points=1024)\n",
+    "for cloud in tqdm.tqdm(clouds):\n",
+    "    ppf, M = extractor.make_example(cloud)\n",
+    "    extracted.append((ppf,M))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "id": "ahead-myanmar",
+   "execution_count": 8,
+   "id": "neither-coordinate",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:00<00:00, 92.11it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "model_path = train_models[np.random.randint(len(train_models))]    "
+    "loss_func = src.loss.N_tuple_loss(extractor.nb_patches)\n",
+    "for ppf, M in tqdm.tqdm(extracted):\n",
+    "    pred = np.random.random((1, extractor.nb_patches, 13)).astype(np.float32)\n",
+    "    res = loss_func(M[np.newaxis,...],pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "apart-scottish",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def angle(u,v):\n",
-    "    cross = np.linalg.norm(np.cross(u, v), axis=-1)\n",
-    "    dot = np.sum(u*v, axis=-1)\n",
-    "    return np.arctan2(cross, dot)\n",
-    "\n",
-    "\n",
-    "class PPFPatchExtractor:\n",
-    "    \"\"\"\n",
-    "    From a point cloud:\n",
-    "    Sample the points that will be centers\n",
-    "    Using KD-tree find neighborhoods\n",
-    "    Then compute PPF on them.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, nb_patches=512, nb_points=256, tau=0.1):\n",
-    "        self.nb_patches = nb_patches\n",
-    "        self.nb_points = nb_points\n",
-    "        self.tau = tau\n",
-    "        \n",
-    "    def make_patches(self, cloud):\n",
-    "        points, normals = cloud\n",
-    "        centers_idx = np.random.choice(len(points), size=self.nb_patches, replace=False)\n",
-    "        centers = points[centers_idx]\n",
-    "        kd_tree = KDTree(points) \n",
-    "        indexes = kd_tree.query(centers, k=self.nb_points, return_distance=False)\n",
-    "        patches = points[indexes]\n",
-    "        centers_normals = normals[centers_idx]\n",
-    "        patches_normals = normals[indexes]\n",
-    "        return centers, centers_normals, patches, patches_normals\n",
-    "\n",
-    "    def compute_ppf(self, centers, centers_normals, patches, patches_normals):\n",
-    "        centers = centers[:,np.newaxis,:]\n",
-    "        centers_normals = centers_normals[:,np.newaxis,:]\n",
-    "        delta = patches - centers\n",
-    "        dist = np.linalg.norm(delta, axis=-1)\n",
-    "        angle_0 = angle(centers_normals, delta) \n",
-    "        angle_1 = angle(patches_normals, delta) \n",
-    "        angle_2 = angle(centers_normals, patches_normals) \n",
-    "        ppf = np.stack((dist, angle_0, angle_1, angle_2), axis=-1)\n",
-    "        features = np.concatenate((delta, patches_normals, ppf), axis=-1)\n",
-    "        return features\n",
-    "    \n",
-    "    def compute_M(self, centers):\n",
-    "        diff = centers[:,np.newaxis] - centers[np.newaxis,:]\n",
-    "        dist = np.sum(diff*diff, axis=-1)\n",
-    "        M = dist < self.tau*self.tau\n",
-    "        return M\n",
-    "    \n",
-    "    def make_example(self, cloud):\n",
-    "        \"\"\"\n",
-    "        Transform point cloud with normals into PPF.\n",
-    "        \"\"\"\n",
-    "        centers, centers_normals, patches, patches_normals =  self.make_patches(cloud)\n",
-    "        ppf = self.compute_ppf(centers, centers_normals, patches, patches_normals)\n",
-    "        M = self.compute_M(centers)\n",
-    "        return ppf, M\n",
-    "    \n",
-    "    def get_N_tuple_loss(self):\n",
-    "        @tf.function\n",
-    "        def loss(M, pred):\n",
-    "            pass\n",
-    "\n",
-    "extractor = PPFPatchExtractor()\n",
-    "res = extractor.make_example(cloud)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "solar-eleven",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "recorded-southwest",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "capital-oriental",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "spoken-thirty",
+   "execution_count": 9,
+   "id": "bearing-anniversary",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[-0.05049742,  0.001337  ,  0.17563553],\n",
-       "        [-0.05518185,  0.01112944, -0.08736867],\n",
-       "        [ 0.20113309,  0.007514  , -0.0510883 ],\n",
-       "        ...,\n",
-       "        [-0.07569871,  0.01077688, -0.0801021 ],\n",
-       "        [-0.0385164 ,  0.00343553,  0.167939  ],\n",
-       "        [-0.01597736,  0.02162101, -0.17428771]]),\n",
-       " array([[-0.        , -1.        ,  0.        ],\n",
-       "        [-0.01718161,  0.99985239,  0.        ],\n",
-       "        [ 0.        , -1.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [ 0.01718161, -0.99985239,  0.        ],\n",
-       "        [ 0.        ,  0.        ,  1.        ],\n",
-       "        [-0.78951488,  0.61361096,  0.01215885]]))"
+       "(2044, 1024, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nb\n",
-    "patch_centers = np.random.choice(len(points), size=)"
+    "ppf.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "interesting-terminal",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bearing-anniversary",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
